# brave-core

./: BUILD.gn  DEPS  brave_paks.gni  package-lock.json  package.json
android/: brave_java_resources.gni
app/: brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc  generated_resources.grd  settings_strings.grdp
browser/: BUILD.gn  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_content_browser_client.h  brave_profile_prefs.cc  brave_stats_updater_params.cc
browser/brave_ads/android/: BUILD.gn  brave_ads_native_helper.cc  brave_ads_native_helper.h  java_sources.gni
browser/brave_ads/android/java/org/chromium/chrome/browser/: BraveAdsNativeHelper.java
browser/brave_ads/android/java/org/chromium/chrome/browser/dialogs/: BraveAdsCustomNotificationDialog.java
browser/notifications/: BUILD.gn  notification_platform_bridge_brave_ads.cc  notification_platform_bridge_brave_custom_notification.cc  notification_platform_bridge_brave_custom_notification.h
browser/ui/: BUILD.gn  brave_browser_command_controller.cc
browser/ui/content_settings/: brave_autoplay_blocked_image_model.cc  brave_autoplay_blocked_image_model.h  brave_autoplay_content_setting_bubble_model.cc  brave_content_setting_bubble_model.cc  brave_content_setting_bubble_model.h  brave_widevine_blocked_image_model.cc  brave_widevine_blocked_image_model.h
browser/ui/views/: ads_notification_view.cc  ads_notification_view.h  brave_browser_dialogs_views.cc
browser/ui/views/location_bar/: brave_location_bar_view.cc
browser/ui/webui/: basic_ui.cc  brave_md_settings_ui.cc  brave_payments_html_source.cc  brave_payments_html_source.h  brave_rewards_internals_ui.cc  brave_rewards_ui.cc  brave_webui_source.cc  new_tab_html_source.cc  web_ui_util.cc  web_ui_util.h
chromium_src/: BUILD.gn
common/: BUILD.gn  brave_cookie_blocking.h  brave_switches.cc  brave_switches.h  google_api_key.h  network_constants.cc
components/: BUILD.gn
components/brave_page_graph/: BUILD.gn  TYPES.txt  graph_item.cc  graph_item.h  page_graph.cc  page_graph.h  types.cc  types.h
components/brave_page_graph/buildflags/: BUILD.gn
components/brave_page_graph/graph_item/: edge.cc  edge.h  node.cc  node.h
components/brave_page_graph/graph_item/edge/: edge_attribute.cc  edge_attribute.h  edge_attribute_delete.cc  edge_attribute_delete.h  edge_attribute_set.cc  edge_attribute_set.h  edge_call.cc  edge_call.h  edge_node.cc  edge_node.h  edge_node_create.cc  edge_node_create.h  edge_node_delete.cc  edge_node_delete.h  edge_node_insert.cc  edge_node_insert.h  edge_node_remove.cc  edge_node_remove.h  edge_request.cc  edge_request.h  edge_storage.cc  edge_storage.h  edge_storage_delete.cc  edge_storage_delete.h  edge_storage_read.cc  edge_storage_read.h  edge_storage_set.cc  edge_storage_set.h
components/brave_page_graph/graph_item/node/: node_actor.cc  node_actor.h  node_html.cc  node_html.h  node_html_element.cc  node_html_element.h  node_html_text.cc  node_html_text.h  node_parser.cc  node_parser.h  node_resource.cc  node_resource.h  node_script.cc  node_script.h  node_shields.cc  node_shields.h  node_storage.cc  node_storage.h  node_storage_cookiejar.cc  node_storage_cookiejar.h  node_storage_localstorage.cc  node_storage_localstorage.h  node_webapi.cc  node_webapi.h
patches/: chrome-VERSION.patch  chrome-browser-about_flags.cc.patch  chrome-browser-resources-settings-autofill_page-passwords_section.html.patch  chrome-browser-resources-settings-page_visibility.html.patch  chrome-browser-resources-settings-privacy_page-personalization_options.html.patch  chrome-browser-sync-chrome_sync_client.cc.patch  chrome-browser-sync-chrome_sync_client.h.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-browser_navigator.cc.patch  chrome-browser-ui-content_settings-content_setting_image_model.h.patch  chrome-browser-ui-views-location_bar-location_bar_view.cc.patch  chrome-browser-ui-webui-settings-md_settings_localized_strings_provider.cc.patch  chrome-common-pref_names.cc.patch  chrome-common-pref_names.h.patch  chrome-installer-mini_installer-BUILD.gn.patch  chrome-installer-util-prebuild-create_installer_string_rc.py.patch  chrome-renderer-content_settings_observer.h.patch  chrome-test-BUILD.gn.patch  components-browser_sync-profile_sync_components_factory_impl.cc.patch  components-browser_sync-profile_sync_components_factory_impl.h.patch  components-browser_sync-profile_sync_service.cc.patch  components-browser_sync-profile_sync_service.h.patch  components-os_crypt-keychain_password_mac.mm.patch  components-sync-driver-data_type_manager_impl.cc.patch  components-sync-driver-glue-sync_backend_host_core.cc.patch  components-sync-driver-glue-sync_backend_host_core.h.patch  components-sync-driver-glue-sync_backend_host_impl.cc.patch  components-sync-driver-glue-sync_backend_host_impl.h.patch  components-sync-engine-sync_engine.h.patch  components-sync-engine-sync_manager.h.patch  components-sync-engine_impl-get_updates_processor.cc.patch  components-sync-engine_impl-syncer.cc.patch  (+38 more)
ui/brave_custom_notification/: BUILD.gn  OWNERS  ad_notification_view_md.cc  ad_notification_view_md.h  message_popup_view.cc  message_popup_view.h  message_popup_view_mac.mm  message_view.cc  message_view.h  message_view_factory.cc  notification_background_painter.cc  notification_background_painter.h  notification_control_buttons_view.cc  notification_control_buttons_view.h  notification_header_view.cc  notification_header_view.h  notification_view.cc  notification_view.h  notification_view_factory.cc  notification_view_factory.h  notification_view_md.cc  notification_view_md.h  padded_button.cc  padded_button.h  proportional_image_view.cc  proportional_image_view.h
ui/brave_custom_notification/public/cpp/: BUILD.gn  brave_custom_notification_public_export.h  constants.h  notification.cc  notification.h  notification_delegate.cc  notification_delegate.h  notification_types.h
ui/brave_custom_notification/vector_icons/: vector_icons.cc.template  vector_icons.h.template
(+302 files in other folders)
