source_set("notifications") {
  sources = [
    "notification_platform_bridge_brave_ads.cc",
    "notification_platform_bridge_brave_ads.h"
  ]
  if (is_android) {
    sources += [
      "brave_notification_platform_bridge_helper_android.cc",
      "brave_notification_platform_bridge_helper_android.h",
    ]
  }

  deps = [
    "//base",
    "//brave/vendor/bat-native-ads",
    "//content/public/browser",
    "//skia",
  ]
}
