source_set("notifications") {
  sources = [
    "notification_platform_bridge_brave_ads.cc",
    "notification_platform_bridge_brave_ads.h"
  ]

  deps = [
    "//base",
    "//brave/components/brave_ads/browser",
    "//brave/ui/brave_ads",
    "//brave/ui/brave_ads/public/cpp",
    "//brave/vendor/bat-native-ads",
    "//content/public/browser",
    "//brave/browser/profiles",
    "//skia",
  ]
}
