import("//build/config/features.gni")

source_set("ui") {
  sources = [
    "webui/basic_ui.cc",
    "webui/basic_ui.h",
    "webui/brave_payments_html_source.cc",
    "webui/brave_payments_html_source.h",
    "webui/brave_web_ui_controller_factory.cc",
    "webui/brave_web_ui_controller_factory.h",
    "webui/new_tab_html_source.cc",
    "webui/new_tab_html_source.h",
    "webui/web_ui_util.cc",
    "webui/web_ui_util.h",
  ]
  public_deps = [
    "//content/public/browser",
    "//brave/components/resources:brave_components_resources_grit",
  ]
}
