import("//brave/build/config.gni")
import("//build/config/features.gni")
import("//brave/components/brave_page_graph/buildflags/buildflags.gni")

source_set("brave_page_graph") {
  public_deps = [
    "buildflags",
  ]

  if (brave_page_graph_enabled) {
    sources = [
      "graph_item/node.cc",
      "graph_item/node.h",
      "graph_item/node/node_html.cc",
      "graph_item/node/node_html.h",
      "graph_item/node/node_parser.cc",
      "graph_item/node/node_parser.h",
      "graph_item/node/node_resource.cc",
      "graph_item/node/node_resource.h",
      "graph_item/node/node_script.cc",
      "graph_item/node/node_script.h",
      "graph_item/node/node_shields.cc",
      "graph_item/node/node_shields.h",
      "graph_item/node/node_storage_cookiejar.cc",
      "graph_item/node/node_storage_cookiejar.h",
      "graph_item/node/node_storage_localstorage.cc",
      "graph_item/node/node_storage_localstorage.h",
      "graph_item/node/node_storage.cc",
      "graph_item/node/node_storage.h",
      "graph_item/node/node_webapi.cc",
      "graph_item/node/node_webapi.h",
      "graph_item/edge.cc",
      "graph_item/edge.h",
      "graph_item/edge/edge_attribute_delete.cc",
      "graph_item/edge/edge_attribute_delete.h",
      "graph_item/edge/edge_attribute_set.cc",
      "graph_item/edge/edge_attribute_set.h",
      "graph_item/edge/edge_attribute.cc",
      "graph_item/edge/edge_attribute.h",
      "graph_item/edge/edge_call.cc",
      "graph_item/edge/edge_call.h",
      "graph_item/edge/edge_node_create.cc",
      "graph_item/edge/edge_node_create.h",
      "graph_item/edge/edge_node_insert.cc",
      "graph_item/edge/edge_node_insert.h",
      "graph_item/edge/edge_node_remove.cc",
      "graph_item/edge/edge_node_remove.h",
      "graph_item/edge/edge_node.cc",
      "graph_item/edge/edge_node.h",
      "graph_item/edge/edge_request.cc",
      "graph_item/edge/edge_request.h",
      "graph_item/edge/edge_storage_delete.cc",
      "graph_item/edge/edge_storage_delete.h",
      "graph_item/edge/edge_storage_read.cc",
      "graph_item/edge/edge_storage_read.h",
      "graph_item/edge/edge_storage_set.cc",
      "graph_item/edge/edge_storage_set.h",
      "graph_item/edge/edge_storage.cc",
      "graph_item/edge/edge_storage.h",
      "graph_item.cc",
      "graph_item.h",
      "types.cc",
      "types.h",
      "page_graph.cc",
      "page_graph.h",
    ]

    # deps = [
    #   "//chrome/common",
    # ]
  }
}
