# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//build/config/jumbo.gni")
import("//build/config/ui.gni")
import("//components/vector_icons/vector_icons.gni")
import("//testing/test.gni")
import("//ui/base/ui_features.gni")

aggregate_vector_icons("brave_message_center_vector_icons") {
  icon_directory = "vector_icons"

  icons = [
    "notification_close_button.icon",
    "notification_expand_less.icon",
    "notification_expand_more.icon",
    "notification_inline_reply.icon",
    "notification_settings_button.icon",
    "notification_snooze_button.icon",
    "product.icon",
  ]
}

# TODO(msw|mukai|dewittj): Move ash-specific files: crbug.com/585175
jumbo_component("brave_custom_notification") {
  deps = [
    "//base",
    "//ui/base",
    "//ui/strings",
    "//url",
  ]

  public_deps = [ "//brave/ui/brave_custom_notification/public/cpp" ]
  if (enable_message_center) {
    deps += [
      ":brave_message_center_vector_icons",
      "//base:i18n",
      "//base/third_party/dynamic_annotations",
      "//components/url_formatter",
      "//skia",
      "//ui/accessibility",
      "//ui/display",
      "//ui/events",
      "//ui/events:gesture_detection",
      "//ui/gfx",
      "//ui/gfx/geometry",
      "//ui/native_theme",
      "//ui/resources",
    ]

    configs += [ "//build/config:precompiled_headers" ]


    if (is_win) {
      deps += [
        "//ui/aura",
        "//ui/wm/public",
      ]
    }

    sources = [
      # "views/brave_message_view.h",
      # "views/brave_message_view.cc",
      #"views/brave_notification_control_buttons_view.cc",
      #"views/brave_notification_control_buttons_view.h",
      #"views/brave_notification_header_view.h",
      #"views/brave_notification_header_view.cc",
      #"views/brave_notification_view_md.h",
      #"views/brave_notification_view_md.cc",
      "message_popup_view.h",
      "message_popup_view.cc",
    ]
    sources += get_target_outputs(":brave_message_center_vector_icons")
    deps += [
      "//ui/compositor",
      "//ui/events",
      "//ui/views",
    ]
    if (is_mac) {
      libs = [ "Foundation.framework" ]
    }
  }
}
